<resources>
    <string name="app_name">Inventory</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="editor_activity_title_new_pet">Add an item</string>
    <string name="action_delete_entry">Delete item</string>
    <string name="category_overview">Overview</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="action_save">Save</string>
    <string name="hint_item_price">$ Price</string>
    <string name="category_description">Description</string>
    <string name="hint_item_description">Describe the product</string>
    <string name="dollarSign">$</string>
    <string name="hint_item_tag1">Tag 1</string>
    <string name="hint_item_tag2">Tag 2</string>
    <string name="hint_item_tag3">Tag 3</string>
    <string name="category_tag">Tags</string>
    <string name="cardview_price_label">Price: $</string>
    <string name="cardview_quantity_label">In stock:&#160;</string>
    <string name="editor_insert_item_successful">Item saved successfully</string>
    <string name="editor_insert_item_failed">An error occurred: Item could not be saved</string>
    <string name="action_delete_current_entry">Delete item</string>
    <string name="editor_delete_item_successful">Item deleted successfully</string>
    <string name="editor_delete_item_failed">An error occurred: Item could not be deleted</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="editor_update_item_successful">Item updated successfully</string>
    <string name="editor_update_item_failed">An error occurred: Item could not be updated</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this item?</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all items?</string>
    <string name="return_dialog_msg">You have unsaved changes. Are you sure you want to exit?</string>
    <string name="discard">Discard changes</string>
    <string name="edit">Keep editing</string>
    <string name="sort_dialog_msg">Sort By</string>
</resources>
