<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">


    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords"/>

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dollarSign"/>

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStylePrice"
                    android:hint="@string/hint_item_price"
                    android:inputType="number"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <!-- Description category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_description"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Description field -->
            <EditText
                android:id="@+id/edit_item_description"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_description"
                android:inputType="textCapWords"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Tags layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_tag"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Tag field -->
            <EditText
                android:id="@+id/edit_item_tag1"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_tag1"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/edit_item_tag2"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_tag2"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/edit_item_tag3"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_tag3"
                android:inputType="textCapWords"/>


        </LinearLayout>

    </LinearLayout>

    <!--&lt;!&ndash; Gender category &ndash;&gt;-->
    <!--<LinearLayout-->
        <!--android:id="@+id/container_gender"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--&lt;!&ndash; Label &ndash;&gt;-->
        <!--<TextView-->
            <!--android:text="@string/category_gender"-->
            <!--style="@style/CategoryStyle" />-->

        <!--&lt;!&ndash; Input field &ndash;&gt;-->
        <!--<LinearLayout-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="2"-->
            <!--android:orientation="vertical">-->

            <!--&lt;!&ndash; Gender drop-down spinner &ndash;&gt;-->
            <!--<Spinner-->
                <!--android:id="@+id/spinner_gender"-->
                <!--android:layout_height="48dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:paddingRight="16dp"-->
                <!--android:spinnerMode="dropdown"/>-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->

    <!--&lt;!&ndash; Measurement category &ndash;&gt;-->
    <!--<LinearLayout-->
        <!--android:id="@+id/container_measurement"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--&lt;!&ndash; Label &ndash;&gt;-->
        <!--<TextView-->
            <!--android:text="@string/category_measurement"-->
            <!--style="@style/CategoryStyle" />-->

        <!--&lt;!&ndash; Input fields &ndash;&gt;-->
        <!--<RelativeLayout-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="2"-->
            <!--android:paddingLeft="4dp">-->

            <!--&lt;!&ndash; Weight field &ndash;&gt;-->
            <!--<EditText-->
                <!--android:id="@+id/edit_pet_weight"-->
                <!--android:hint="@string/hint_pet_weight"-->
                <!--android:inputType="number"-->
                <!--style="@style/EditorFieldStyle" />-->

            <!--&lt;!&ndash; Units for weight (kg) &ndash;&gt;-->
            <!--<TextView-->
                <!--android:id="@+id/label_weight_units"-->
                <!--android:text="@string/unit_pet_weight"-->
                <!--style="@style/EditorUnitsStyle"/>-->
        <!--</RelativeLayout>-->
    <!--</LinearLayout>-->


</LinearLayout>